--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="utf-8">
     <title>мой первый сайт</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
@@ -18,7 +20,7 @@
     </header>
     <section>
       <main>
-        <h1>Building an App Without Design Expertise?</h1>
+        <h1 class="title">Building an App Without Design Expertise?</h1>
         <p>I help tech startups design better digital products without hiring a full-time designer</p>
         <button>Schedule free consultation</button>
       </main>
