--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
-  <body>
-    <header class="header">
+  <body class="body">
+  	<div class="wrapper">
+      <header class="header">
       <div class="logo">app.creation</div>
         <nav class="menu">
-          <a class="menu__item">start</a>
-          <a class="menu__item">services</a>
-          <a class="menu__item">about</a>
-          <a class="menu__item">blog</a>
-          <a class="menu__item">contact us</a>
+          <a class="menu__item" href="#">start</a>
+          <a class="menu__item" href="#">services</a>
+          <a class="menu__item" href="#">about</a>
+          <a class="menu__item" href="#">blog</a>
+          <a class="menu__item" href="#">contact us</a>
         </nav>
     </header>
     <section class="main-section">
@@ -27,7 +28,9 @@
       <div class="image-content">
         <img class="image-content__image" src="" alt="">
       </div>
+
     </section>
+    </div>
 
   </body>
 </html>
